--- a/config/tsconfig.base.json
+++ b/config/tsconfig.base.json
@@ -1,29 +1,24 @@
 {
-  "extends": "./tsconfig.flexible",
+  "extends": "./tsconfig.strict",
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
+    "target": "es2018",
+    "noImplicitAny": false,
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "../dist",
-    "baseUrl": "../",
+		"baseUrl": "./packages",
     "paths": {
-      "*": [
-        "../node_modules/*",
-        "../src/types/*"
-      ],
-      "typescript-starter": [
-        "../src/index.ts"
-      ]
-    },
+			"*": ["./node_modules/*"],
+			"timeline-state-resolver": ["timeline-state-resolver"],
+			"timeline-state-resolver-types": ["timeline-state-resolver-types"]
+		},
     "declaration": true,
     "importHelpers": true,
     "listFiles": false,
     "traceResolution": false,
     "pretty": true,
     "lib": [
-      "es6",
-      "dom"
+      "es6"
     ],
     "types": [
       "node",
