--- a/config/tsconfig.flexible.json
+++ b/config/tsconfig.flexible.json
@@ -1,12 +1,5 @@
 {
   "compilerOptions": {
-    "strictNullChecks": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny" : false,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "strictNullChecks": true
   }
 }
