--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -36,7 +36,7 @@
 		}
 	],
 	"scripts": {
-		"unlink:all": "yarn unlink atem-connection & yarn unlink atem-state & yarn unlink casparcg-connection & yarn unlink casparcg-state & yarn unlink superfly-timeline",
+		"start": "node dist/index.js",
 		"build": "rimraf dist && yarn build:main",
 		"build:main": "tsc -p tsconfig.build.json",
 		"lint:raw": "eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist",
@@ -85,6 +85,7 @@
 	"dependencies": {
 		"@sofie-automation/shared-lib": "1.44.0-in-testing.1",
 		"@sofie-automation/server-core-integration": "1.44.0-in-testing.1",
+		"@sofie-automation/input-manager": "../input-manager",
 		"debug": "^4.3.1",
 		"eventemitter3": "^4.0.7",
 		"p-all": "^3.0.0",
