--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -85,7 +85,7 @@
 	"dependencies": {
 		"@sofie-automation/shared-lib": "1.44.0-in-testing.1",
 		"@sofie-automation/server-core-integration": "1.44.0-in-testing.1",
-		"@sofie-automation/input-manager": "../input-manager",
+		"@sofie-automation/input-manager": "file:../input-manager",
 		"debug": "^4.3.1",
 		"eventemitter3": "^4.0.7",
 		"p-all": "^3.0.0",
