--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.0",
   "workspaces": {
     "packages": [
-      "packages/input-gateway",
-      "packages/input-manager"
+      "packages/**"
     ],
     "nohoist": [
       "**/easymidi",
