--- a/packages/input-manager/package.json
+++ b/packages/input-manager/package.json
@@ -92,7 +92,11 @@
 	"dependencies": {
 		"easymidi": "^3.0.1",
 		"@elgato-stream-deck/node": "^5.6.0",
-		"@julusian/jpeg-turbo": "^2.0.0"
+		"@julusian/jpeg-turbo": "^2.0.0",
+		"sharp": "^0.31.2"
+	},
+	"devDependencies": {
+		"@types/sharp": "^0.31.0"
 	},
 	"publishConfig": {
 		"access": "public"
