--- a/packages/input-manager/tsconfig.json
+++ b/packages/input-manager/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"extends": "./tsconfig.build.json",
-	"include": ["src/**/*.ts", "examples/**/*.ts"],
+	"include": ["src/**/*.ts", "examples/**/*.ts", "src/**/*.tsx"],
 	"exclude": ["node_modules/**"],
 	"compilerOptions": {
-		"types": ["jest", "node"]
-	}
+		"types": ["jest", "node"],
+	},
 }
