--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "test": "yarn lerna exec yarn test",
     "unit": "yarn lerna exec yarn unit",
     "unitci": "yarn lerna exec yarn unitci",
-    "watch": "lerna run --parallel build:main -- --watch --preserveWatchOutput",
     "docs": "yarn typedoc .",
-    "start": "cd packages/input-gateway && yarn start",
-    "buildstart": "yarn build && yarn start",
+    "start": "yarn build:main && cd packages/input-gateway && yarn start",
+    "dev:manager": "cd packages/input-manager && yarn build:watch",
+    "dev:gateway": "nodemon --config nodemon.json ./packages/input-gateway/index.ts",
+    "dev": "concurrently \"yarn dev:manager\" \"yarn dev:gateway\"",
     "postinstall": "lerna bootstrap",
     "release:set-version": "lerna version --exact --no-changelog --no-git-tag-version --no-push --yes",
     "release:bump-release": "lerna version --exact --conventional-commits --conventional-graduate --tag-version-prefix='' --no-push --force-publish=*",
@@ -43,14 +44,17 @@
     "@types/underscore": "^1.10.24",
     "@types/ws": "^7.4.7",
     "@types/xml-js": "^1.0.0",
+    "concurrently": "^7.5.0",
     "jest": "^26.0.1",
     "jest-haste-map": "^26.0.1",
     "jest-resolve": "^26.0.1",
     "lerna": "^5.5.2",
+    "nodemon": "^2.0.20",
     "open-cli": "^7.0.1",
     "rimraf": "^3.0.2",
     "symlink-dir": "^5.0.1",
     "ts-jest": "^26.1.0",
+    "ts-node": "^10.9.1",
     "type-fest": "^2.16.0",
     "typedoc": "^0.22.14",
     "typescript": "~4.6"
