feat(MIDI): add midi feedback

--- a/packages/input-manager/package.json
+++ b/packages/input-manager/package.json
@@ -94,7 +94,8 @@
 		"@elgato-stream-deck/node": "^5.6.0",
 		"@julusian/jpeg-turbo": "^2.0.0",
 		"easymidi": "^3.0.1",
-		"skia-canvas": "^1.0.1"
+		"skia-canvas": "^1.0.1",
+		"xkeys": "^2.4.0"
 	},
 	"devDependencies": {},
 	"publishConfig": {
