--- a/packages/input-manager/package.json
+++ b/packages/input-manager/package.json
@@ -94,10 +94,13 @@
 		"@elgato-stream-deck/node": "^5.6.0",
 		"@julusian/jpeg-turbo": "^2.0.0",
 		"easymidi": "^3.0.1",
+		"eventemitter3": "^4.0.7",
 		"skia-canvas": "^1.0.1",
 		"xkeys": "^2.4.0"
 	},
-	"devDependencies": {},
+	"devDependencies": {
+		"@types/node": "^18.11.13"
+	},
 	"publishConfig": {
 		"access": "public"
 	}
