--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -83,7 +83,7 @@
 		"production"
 	],
 	"dependencies": {
-		"@sofie-automation/input-manager": "0.0.1",
+		"@sofie-automation/input-manager": "*",
 		"@sofie-automation/server-core-integration": "1.44.0-in-testing.1",
 		"@sofie-automation/shared-lib": "1.44.0-in-testing.1",
 		"debug": "^4.3.1",
