--- a/packages/input-manager/package.json
+++ b/packages/input-manager/package.json
@@ -93,6 +93,7 @@
 	"dependencies": {
 		"@elgato-stream-deck/node": "^5.6.0",
 		"@julusian/jpeg-turbo": "^2.0.0",
+		"@sofie-automation/shared-lib": "1.44.0-in-testing.1",
 		"easymidi": "^3.0.1",
 		"eventemitter3": "^4.0.7",
 		"skia-canvas": "^1.0.1",
