--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "docs": "yarn typedoc .",
     "start": "yarn build:main && cd packages/input-gateway && yarn start",
     "dev:manager": "cd packages/input-manager && yarn build:watch",
-    "dev:gateway": "nodemon --config nodemon.json ./packages/input-gateway/index.ts",
+    "dev:gateway": "nodemon --config nodemon.json ./packages/input-gateway/index.ts -id devxxsofie",
     "dev": "concurrently \"yarn dev:manager\" \"yarn dev:gateway\"",
     "postinstall": "lerna bootstrap",
     "release:set-version": "lerna version --exact --no-changelog --no-git-tag-version --no-push --yes",
