--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -84,8 +84,8 @@
 	],
 	"dependencies": {
 		"@sofie-automation/input-manager": "*",
-		"@sofie-automation/server-core-integration": "1.44.0-in-testing.1",
-		"@sofie-automation/shared-lib": "1.44.0-in-testing.1",
+		"@sofie-automation/server-core-integration": "1.49.0-nightly-feat-triggerGateways-20230104-152414-b8e0493.0",
+		"@sofie-automation/shared-lib": "1.49.0-nightly-feat-triggerGateways-20230104-152414-b8e0493.0",
 		"debug": "^4.3.1",
 		"eventemitter3": "^4.0.7",
 		"p-all": "^3.0.0",
