fix: don't build font files into the binary

--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "release:bump-prerelease": "lerna version --exact --conventional-commits --conventional-prerelease --tag-version-prefix='' --no-push --force-publish=*",
     "validate:dependencies": "yarn lerna exec --parallel yarn validate:dependencies",
     "validate:dev-dependencies": "yarn lerna exec --parallel yarn validate:dev-dependencies",
-    "do:build-win32": "yarn build-win32 && yarn sign-executables",
+    "do:build-win32": "rimraf deploy && yarn build-win32 && yarn copy-assets && yarn sign-executables",
     "build-win32": "pkg -t node16-win --public ./packages/input-gateway",
-    "sign-executables": "node scripts/sign-executables.js"
+    "sign-executables": "node scripts/sign-executables.js",
+    "copy-assets": "node scripts/copy-assets.js"
   },
   "devDependencies": {
     "@sofie-automation/code-standard-preset": "~2.0.2",
