--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "input-gateway",
-	"version": "0.0.1",
+	"version": "0.1.0",
 	"description": "Have devices, trigger stuff",
 	"main": "dist/index.js",
 	"bin": {
@@ -72,7 +72,7 @@
 		"production"
 	],
 	"dependencies": {
-		"@sofie-automation/input-manager": "*",
+		"@sofie-automation/input-manager": "0.1.0",
 		"@sofie-automation/server-core-integration": "1.49.0-nightly-feat-triggerGateways-20230109-123747-3c71f04.0",
 		"@sofie-automation/shared-lib": "1.49.0-nightly-feat-triggerGateways-20230109-123747-3c71f04.0",
 		"debug": "^4.3.1",
@@ -94,7 +94,9 @@
 			"../../node_modules/@sofie-automation/server-core-integration/package.json",
 			"../input-manager/node_modules/node-hid/build/Release/HID.node"
 		],
-		"targets": ["node16-win"],
-		"outputPath": "deploy" 
+		"targets": [
+			"node16-win"
+		],
+		"outputPath": "deploy"
 	}
 }
