chore: improve npm scripts

--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "build": "yarn build:manager && yarn build:main",
-    "build:main": "cd packages/input-gateway && yarn build",
-    "build:manager": "cd packages/input-manager && yarn build",
-    "lint": "yarn lerna exec yarn lint -- --",
-    "test": "yarn lerna exec yarn test",
-    "unit": "yarn lerna exec yarn unit",
-    "unitci": "yarn lerna exec yarn unitci",
+    "build": "lerna run build",
+    "build:main": "lerna --scope=input-gateway run build",
+    "build:manager": "yarn lerna --scope=@sofie-automation/input-manager run build",
+    "lint": "lerna run lint -- --",
+    "test": "lerna run test",
+    "unit": "lerna run unit",
+    "unitci": "lerna run unitci",
     "docs": "yarn typedoc .",
-    "start": "yarn build:main && cd packages/input-gateway && yarn start",
+    "start": "lerna run start",
     "dev:manager": "cd packages/input-manager && yarn build:watch",
     "dev:gateway": "nodemon --config nodemon.json ./packages/input-gateway/index.ts -id devxxsofie",
     "dev": "concurrently \"yarn dev:manager\" \"yarn dev:gateway\"",
@@ -33,8 +33,8 @@
     "release:set-version": "lerna version --exact --no-changelog --no-git-tag-version --no-push --yes",
     "release:bump-release": "lerna version --exact --conventional-commits --conventional-graduate --tag-version-prefix='' --no-push --force-publish=*",
     "release:bump-prerelease": "lerna version --exact --conventional-commits --conventional-prerelease --tag-version-prefix='' --no-push --force-publish=*",
-    "validate:dependencies": "yarn lerna exec --parallel yarn validate:dependencies",
-    "validate:dev-dependencies": "yarn lerna exec --parallel yarn validate:dev-dependencies",
+    "validate:dependencies": "lerna exec --parallel yarn validate:dependencies",
+    "validate:dev-dependencies": "lerna exec --parallel yarn validate:dev-dependencies",
     "do:build-win32": "rimraf deploy && yarn install && yarn build && yarn build-win32 && yarn copy-assets && yarn sign-executables && yarn zip-deploy",
     "build-win32": "pkg -t node16-win --public ./packages/input-gateway",
     "sign-executables": "node scripts/sign-executables.js",
