--- a/packages/input-gateway/tsconfig.json
+++ b/packages/input-gateway/tsconfig.json
@@ -3,6 +3,7 @@
 	"include": ["src/**/*.ts", "examples/**/*.ts"],
 	"exclude": ["node_modules/**"],
 	"compilerOptions": {
-		"types": ["jest", "node"]
+		"types": ["jest", "node"],
+		"esModuleInterop": true
 	}
 }
