--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "validate:dev-dependencies": "lerna exec --parallel yarn validate:dev-dependencies",
     "do:build-win32": "rimraf deploy && yarn install && yarn build && yarn build-win32 && yarn copy-assets && yarn sign-executables && yarn zip-deploy",
     "do:build-win32:ci": "rimraf deploy && yarn install && yarn build && yarn build-win32 && yarn copy-assets",
+    "verify:build-win32": "node scripts/verify-build-win32.mjs",
     "build-win32": "pkg -t node16-win --public ./packages/input-gateway",
     "sign-executables": "node scripts/sign-executables.js",
     "copy-assets": "node scripts/copy-assets.js",
