--- a/.github/workflows/lint-and-test.yaml
+++ b/.github/workflows/lint-and-test.yaml
@@ -71,6 +71,6 @@ jobs:
           CI: true
       - name: Run unit tests
         run: |
-          yarn test:ci
+          yarn test
         env:
           CI: true
