--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -27,6 +27,7 @@
 	"scripts": {
 		"start": "node dist/index.js",
 		"build": "rimraf dist && yarn build:main",
+		"buildstart": "yarn build && yarn start",
 		"build:main": "tsc -p tsconfig.build.json",
 		"lint:raw": "eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist",
 		"lint": "yarn lint:raw .",
