--- a/packages/input-manager/package.json
+++ b/packages/input-manager/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@sofie-automation/input-manager",
-	"version": "0.1.2",
+	"version": "0.2.0-alpha.0",
 	"description": "Have devices, send events, receive feedback",
 	"main": "dist/index.js",
 	"typings": "dist/index.d.ts",
