--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -93,5 +93,5 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: deploy/*.zip
-          prerelease: contains(github.ref, '-')
+          prerelease: ${{ contains(github.ref, '-') }}
           fail_on_unmatched_files: true
