--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -94,6 +94,7 @@
 		"assets": [
 			"../../node_modules/@sofie-automation/server-core-integration/package.json",
 			"../input-manager/node_modules/node-hid/build/Release/HID.node",
+			"../../node_modules/xkeys/node_modules/node-hid/build/Release/HID.node",
 			"./package.json"
 		],
 		"targets": [
