chore: update for release50

--- a/packages/input-gateway/tsconfig.build.json
+++ b/packages/input-gateway/tsconfig.build.json
@@ -11,6 +11,7 @@
 		},
 		"types": ["node"],
 		"esModuleInterop": true,
-		"target": "ES2021"
+		"target": "ES2021",
+		"resolveJsonModule": true,
 	}
 }
