--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "build": "lerna run build",
+    "build": "yarn run generate-schema-types && lerna run build",
     "build:main": "lerna --scope=input-gateway run build",
     "build:manager": "yarn lerna --scope=@sofie-automation/input-manager run build",
     "lint": "lerna run lint -- --",
@@ -35,7 +35,8 @@
     "sign-executables": "node scripts/sign-executables.js",
     "copy-assets": "node scripts/copy-assets.js",
     "zip-deploy": "node scripts/zip-deploy.js",
-    "release": "sofie-version"
+    "release": "sofie-version",
+    "generate-schema-types": "lerna run generate-schema-types --stream"
   },
   "devDependencies": {
     "@sofie-automation/code-standard-preset": "~2.4.6",
@@ -50,6 +51,7 @@
     "jest": "^26.0.1",
     "jest-haste-map": "^26.0.1",
     "jest-resolve": "^26.0.1",
+    "json-schema-to-typescript": "^11.0.3",
     "lerna": "^6.6.1",
     "nodemon": "^2.0.20",
     "open-cli": "^7.0.1",
