--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -3,6 +3,7 @@
 	"version": "0.2.1",
 	"description": "Have devices, trigger stuff",
 	"main": "dist/index.js",
+	"private": true,
 	"bin": "dist/index.js",
 	"license": "MIT",
 	"contributors": [
@@ -40,7 +41,8 @@
 		"cov-open": "open-cli coverage/lcov-report/index.html",
 		"validate:dependencies": "yarn audit --groups dependencies && yarn license-validate",
 		"validate:dev-dependencies": "yarn audit --groups devDependencies",
-		"precommit": "lint-staged"
+		"precommit": "lint-staged",
+		"generate-schema-types": "json2ts -i './src/$schemas/' -o ./src/generated/"
 	},
 	"lint-staged": {
 		"*.{css,json,md,scss}": [
@@ -72,8 +74,8 @@
 	],
 	"dependencies": {
 		"@sofie-automation/input-manager": "0.2.1",
-		"@sofie-automation/server-core-integration": "1.49.0-nightly-feat-triggerGateways-20230109-123747-3c71f04.0",
-		"@sofie-automation/shared-lib": "1.49.0-nightly-feat-triggerGateways-20230109-123747-3c71f04.0",
+		"@sofie-automation/server-core-integration": "1.50.0-nightly-release50-20230529-135607-13157b3.0",
+		"@sofie-automation/shared-lib": "1.50.0-nightly-release50-20230529-135607-13157b3.0",
 		"debug": "^4.3.1",
 		"eventemitter3": "^4.0.7",
 		"p-all": "^3.0.0",
