--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-	"version": "0.2.1",
-	"npmClient": "yarn",
-	"useWorkspaces": true
+  "version": "0.2.2-alpha.0",
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
