--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "input-gateway",
-	"version": "0.2.1",
+	"version": "0.2.2-alpha.0",
 	"description": "Have devices, trigger stuff",
 	"main": "dist/index.js",
 	"private": true,
@@ -73,7 +73,7 @@
 		"production"
 	],
 	"dependencies": {
-		"@sofie-automation/input-manager": "0.2.1",
+		"@sofie-automation/input-manager": "0.2.2-alpha.0",
 		"@sofie-automation/server-core-integration": "1.50.0-nightly-release50-20230529-135607-13157b3.0",
 		"@sofie-automation/shared-lib": "1.50.0-nightly-release50-20230529-135607-13157b3.0",
 		"debug": "^4.3.1",
