--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,14 @@
 	"configurations": [
 		{
 			"type": "node",
-			"request": "attach",
-			"name": "Attach to Playout Gateway",
+			"request": "launch",
+			"name": "Launch Input Gateway",
+			"program": "${workspaceFolder}/packages/input-gateway/dist/index.js",
+			"args": ["-id", "devxxsofie"],
+			"console": "integratedTerminal",
 			"outFiles": [
-				"${workspaceFolder}/dist/*.js"
+				"${workspaceFolder}/packages/input-gateway/dist/**/*.js",
+				"${workspaceFolder}/packages/input-manager/dist/**/*.js"
 			]
 		}
 	]
