--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -92,7 +92,7 @@
 	"pkg": {
 		"assets": [
 			"../../node_modules/@sofie-automation/server-core-integration/package.json",
-			"../input-manager/node_modules/node-hid/build/Release/HID.node",
+			"../../node_modules/node-hid/build/Release/HID.node",
 			"../../node_modules/xkeys/node_modules/node-hid/build/Release/HID.node",
 			"./package.json"
 		],
