chore: update to latest 1.51 server-integration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,20 @@
 		{
 			"type": "node",
 			"request": "launch",
-			"name": "Launch Input Gateway",
+			"name": "Build & Run Input Gateway",
+			"preLaunchTask": "Input Gateway: build",
+			"program": "${workspaceFolder}/packages/input-gateway/dist/index.js",
+			"args": ["-id", "devxxsofie"],
+			"console": "integratedTerminal",
+			"outFiles": [
+				"${workspaceFolder}/packages/input-gateway/dist/**/*.js",
+				"${workspaceFolder}/packages/input-manager/dist/**/*.js"
+			]
+		},
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "Run Input Gateway",
 			"program": "${workspaceFolder}/packages/input-gateway/dist/index.js",
 			"args": ["-id", "devxxsofie"],
 			"console": "integratedTerminal",
