--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,5 @@
-nodeLinker: node-modules
+compressionLevel: mixed
 
-yarnPath: .yarn/releases/yarn-3.5.1.cjs
+enableGlobalCache: false
+
+nodeLinker: node-modules
