--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -29,8 +29,9 @@ jobs:
           CI: true
           PKG_CACHE_PATH: ${{ runner.temp }}
         run: |
+          corepack enable
           # try and avoid timeout errors
-          yarn config set network-timeout 100000 -g
+          yarn config set httpTimeout 100000
 
           yarn install
           yarn do:build-win32:ci
