--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -8,8 +8,8 @@
 	"license": "MIT",
 	"contributors": [
 		{
-			"name": "Balte de Wit",
-			"email": "balte@superfly.tv",
+			"name": "Mint de Wit",
+			"email": "mint@superfly.tv",
 			"url": "http://superfly.tv"
 		},
 		{
