--- a/packages/input-manager/package.json
+++ b/packages/input-manager/package.json
@@ -21,8 +21,8 @@
 			"url": "http://superfly.tv"
 		},
 		{
-			"name": "Balte de Wit",
-			"email": "balte@superfly.tv",
+			"name": "Mint de Wit",
+			"email": "mint@superfly.tv",
 			"url": "http://superfly.tv"
 		},
 		{
