chore: update typescript and scripts

--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -25,23 +25,23 @@
 	],
 	"scripts": {
 		"start": "node dist/index.js",
-		"build": "rimraf dist && yarn build:main",
-		"buildstart": "yarn build && yarn start -id devxxsofie",
-		"build:main": "tsc -p tsconfig.build.json",
-		"lint:raw": "eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist",
-		"lint": "yarn lint:raw .",
-		"lint-fix": "yarn lint --fix",
-		"license-validate": "yarn sofie-licensecheck",
+		"build": "rimraf dist && run build:main",
+		"buildstart": "run build && run start -id devxxsofie",
+		"build:main": "run -T -B tsc -p tsconfig.build.json",
+		"lint:raw": "run -T g:eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist",
+		"lint": "run lint:raw .",
+		"lint-fix": "run lint --fix",
+		"license-validate": "run -T -B sofie-licensecheck",
 		"unit": "jest --forceExit",
 		"unitci": "jest --forceExit --coverage",
-		"test": "yarn lint && yarn unit",
-		"test:integration": "yarn lint && jest --config=jest-integration.config.js",
+		"test": "run lint && run unit",
+		"test:integration": "run lint && jest --config=jest-integration.config.js",
 		"watch": "jest --watch",
-		"cov": "jest --coverage && yarn cov-open",
+		"cov": "jest --coverage && run cov-open",
 		"cov-open": "open-cli coverage/lcov-report/index.html",
-		"validate:dependencies": "yarn audit --groups dependencies && yarn license-validate",
-		"validate:dev-dependencies": "yarn audit --groups devDependencies",
-		"generate-schema-types": "json2ts -i './src/$schemas/' -o ./src/generated/"
+		"validate:dependencies": "yarn npm audit --environment production && run license-validate",
+		"validate:dev-dependencies": "yarn npm audit",
+		"generate-schema-types": "run -T -B json2ts -i './src/$schemas/' -o ./src/generated/"
 	},
 	"lint-staged": {
 		"*.{css,json,md,scss}": [
