--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
   "scripts": {
     "prepare": "husky install",
     "precommit": "lint-staged",
-    "build": "yarn run generate-schema-types && lerna run build",
-    "build:main": "lerna --scope=input-gateway run build",
-    "build:manager": "yarn lerna --scope=@sofie-automation/input-manager run build",
-    "lint": "lerna run lint -- --",
-    "test": "lerna run test",
-    "unit": "lerna run unit",
-    "unitci": "lerna run unitci",
-    "dev:manager": "cd packages/input-manager && yarn build:watch",
+    "build": "run generate-schema-types && yarn workspaces foreach --all run build",
+    "build:main": "yarn workspace input-gateway run build",
+    "build:manager": "yarn workspace @sofie-automation/input-manager run build",
+    "lint": "yarn workspaces foreach --all run lint -- --",
+    "test": "yarn workspaces foreach --all run test",
+    "unit": "yarn workspaces foreach --all run unit",
+    "unitci": "yarn workspaces foreach --all run unitci",
+    "dev:manager": "cd packages/input-manager && run build:watch",
     "dev:gateway": "nodemon --config nodemon.json",
     "dev": "concurrently \"yarn dev:manager\" \"yarn dev:gateway\"",
     "release:set-version": "lerna version --exact --no-changelog --no-git-tag-version --no-push --yes",
     "release:bump-release": "lerna version --exact --conventional-commits --conventional-graduate --tag-version-prefix='v' --no-push",
     "release:bump-prerelease": "lerna version --exact --conventional-commits --conventional-prerelease --tag-version-prefix='v' --no-push",
-    "validate:dependencies": "lerna exec --parallel yarn validate:dependencies",
-    "validate:dev-dependencies": "lerna exec --parallel yarn validate:dev-dependencies",
+    "validate:dependencies": "yarn workspaces foreach --all run validate:dependencies",
+    "validate:dev-dependencies": "yarn workspaces foreach --all run validate:dev-dependencies",
     "do:build-win32": "rimraf deploy && yarn install && yarn build && yarn build-win32 && yarn copy-assets && yarn sign-executables && yarn zip-deploy",
     "do:build-win32:ci": "rimraf deploy && yarn install && yarn build && yarn build-win32 && yarn copy-assets",
     "verify:build-win32": "node scripts/verify-build-win32.mjs",
@@ -37,10 +37,11 @@
     "copy-assets": "node scripts/copy-assets.js",
     "zip-deploy": "node scripts/zip-deploy.js",
     "release": "sofie-version",
-    "generate-schema-types": "lerna run generate-schema-types --stream"
+    "generate-schema-types": "yarn workspaces foreach --all run generate-schema-types",
+    "g:eslint": "cd $INIT_CWD && \"$PROJECT_CWD/node_modules/.bin/eslint\""
   },
   "devDependencies": {
-    "@sofie-automation/code-standard-preset": "~2.4.7",
+    "@sofie-automation/code-standard-preset": "~2.5.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.19.33",
     "@types/sprintf-js": "^1.1.4",
@@ -55,8 +56,8 @@
     "rimraf": "^5.0.7",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "type-fest": "^2.19.0",
-    "typescript": "~4.9.5",
+    "type-fest": "^4.18.2",
+    "typescript": "~5.1.3",
     "zip-a-folder": "^3.1.6"
   },
   "prettier": "@sofie-automation/code-standard-preset/.prettierrc.json",
