--- a/packages/input-manager/package.json
+++ b/packages/input-manager/package.json
@@ -46,22 +46,22 @@
 		}
 	],
 	"scripts": {
-		"build": "rimraf dist && yarn build:main",
-		"build:main": "tsc -p tsconfig.build.json",
-		"build:watch": "tsc -p tsconfig.build.json --watch",
-		"lint:raw": "eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist",
-		"lint": "yarn lint:raw .",
-		"lint-fix": "yarn lint --fix",
-		"license-validate": "yarn sofie-licensecheck",
+		"build": "run -T -B rimraf dist && run build:main",
+		"build:main": "run -T -B tsc -p tsconfig.build.json",
+		"build:watch": "run -T -B tsc -p tsconfig.build.json --watch",
+		"lint:raw": "run -T g:eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist",
+		"lint": "run lint:raw .",
+		"lint-fix": "run lint --fix",
+		"license-validate": "run -T -B sofie-licensecheck",
 		"unit": "jest --forceExit",
 		"unitci": "jest --forceExit --coverage",
-		"test": "yarn lint && yarn unit",
-		"test:integration": "yarn lint && jest --config=jest-integration.config.js",
+		"test": "run lint && run unit",
+		"test:integration": "run lint && jest --config=jest-integration.config.js",
 		"watch": "jest --watch",
-		"cov": "jest --coverage && yarn cov-open",
+		"cov": "jest --coverage && run cov-open",
 		"cov-open": "open-cli coverage/lcov-report/index.html",
-		"validate:dependencies": "yarn audit --groups dependencies && yarn license-validate",
-		"validate:dev-dependencies": "yarn audit --groups devDependencies",
+		"validate:dependencies": "yarn npm audit --environment production && run license-validate",
+		"validate:dev-dependencies": "yarn npm audit",
 		"generate-schema-types": "node ./scripts/schema-types.mjs"
 	},
 	"engines": {
