--- a/packages/input-manager/tsconfig.build.json
+++ b/packages/input-manager/tsconfig.build.json
@@ -12,7 +12,7 @@
 		"types": ["node"],
 		"esModuleInterop": true,
 		"skipLibCheck": true,
-		"target": "ES2021",
-		"resolveJsonModule": true,
+		"target": "ES2022",
+		"resolveJsonModule": true
 	}
 }
