chore: update some tooling for updated glob

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "do:build-win32:ci": "rimraf deploy && yarn install && yarn build && yarn build-win32 && yarn copy-assets",
     "verify:build-win32": "node scripts/verify-build-win32.mjs",
     "build-win32": "pkg -t node18-win --public ./packages/input-gateway",
-    "sign-executables": "node scripts/sign-executables.js",
-    "copy-assets": "node scripts/copy-assets.js",
+    "sign-executables": "node scripts/sign-executables.mjs",
+    "copy-assets": "node scripts/copy-assets.mjs",
     "zip-deploy": "node scripts/zip-deploy.js",
     "release": "sofie-version",
     "generate-schema-types": "yarn workspaces foreach --all run generate-schema-types",
