chore: fix build command

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "prepare": "husky install",
     "precommit": "lint-staged",
-    "build": "run generate-schema-types && yarn workspaces foreach --all run build",
+    "build": "run generate-schema-types && yarn workspaces foreach --all -t run build",
     "build:main": "yarn workspace input-gateway run build",
     "build:manager": "yarn workspace @sofie-automation/input-manager run build",
     "lint": "yarn workspaces foreach --all run lint -- --",
@@ -27,8 +27,8 @@
     "release:set-version": "lerna version --exact --no-changelog --no-git-tag-version --no-push --yes",
     "release:bump-release": "lerna version --exact --conventional-commits --conventional-graduate --tag-version-prefix='v' --no-push",
     "release:bump-prerelease": "lerna version --exact --conventional-commits --conventional-prerelease --tag-version-prefix='v' --no-push",
-    "validate:dependencies": "yarn workspaces foreach --all run validate:dependencies",
-    "validate:dev-dependencies": "yarn workspaces foreach --all run validate:dev-dependencies",
+    "validate:dependencies": "yarn workspaces foreach --all -p run validate:dependencies",
+    "validate:dev-dependencies": "yarn workspaces foreach --all -p run validate:dev-dependencies",
     "do:build-win32": "rimraf deploy && yarn install && yarn build && yarn build-win32 && yarn copy-assets && yarn sign-executables && yarn zip-deploy",
     "do:build-win32:ci": "rimraf deploy && yarn install && yarn build && yarn build-win32 && yarn copy-assets",
     "verify:build-win32": "node scripts/verify-build-win32.mjs",
