--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,4 @@
 {
-  "version": "0.3.0-alpha.0",
-  "npmClient": "yarn",
-  "useWorkspaces": true
+	"version": "0.3.0-alpha.0",
+	"npmClient": "yarn"
 }
