--- a/packages/input-gateway/package.json
+++ b/packages/input-gateway/package.json
@@ -26,7 +26,7 @@
 	"scripts": {
 		"start": "node dist/index.js",
 		"build": "run -T -B rimraf dist && run build:main",
-		"buildstart": "run build && run start -id devxxsofie",
+		"buildstart": "run build && run start -id localDevInp",
 		"build:main": "run -T -B tsc -p tsconfig.build.json",
 		"lint:raw": "run -T g:eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist",
 		"lint": "run lint:raw .",
