--- a/packages/input-manager/package.json
+++ b/packages/input-manager/package.json
@@ -96,6 +96,7 @@
 		"easymidi": "^3.1.0",
 		"eventemitter3": "^4.0.7",
 		"fold-to-ascii": "^5.0.1",
+		"lru-cache": "^10.2.2",
 		"osc": "^2.4.4",
 		"skia-canvas": "^1.0.1",
 		"xkeys": "^3.1.1"
